--- a/package.json
+++ b/package.json
@@ -21,7 +21,17 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/lodash": "^4.14.106",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
+    "ng-spin-kit": "^5.1.1",
+    "ng2-dragula": "^1.5.0",
+    "ng2-search-filter": "^0.4.7",
+    "ngx-pipes": "^2.1.2",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
