--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "ng-drag-drop": "^4.0.1",
     "ng-spin-kit": "^5.1.1",
+    "ng2-dnd": "^5.0.2",
     "ng2-dragula": "^1.5.0",
     "ng2-search-filter": "^0.4.7",
     "ngx-pipes": "^2.1.2",
